--- a/initial-utilities/Makefile
+++ b/initial-utilities/Makefile
@@ -1,5 +1,5 @@
 # Declare the variable for the source file
-file = ngrep.c  # Replace this with your actual source file name
+file = nzip.c  # Replace this with your actual source file name
 
 # Define the target for compilation
 all: $(file)
